<resources>
    <string name="app_name">TopStar</string>
    <string name="app_name...">TopStar…</string>
    <string name="fromApp">from, Pixel Planet</string>
    <string name="pin">PIN</string>
    <string name="pinChat">Pin</string>
    <string name="copied">Copied</string>
    <string name="playGame">Play Game</string>
    <string name="viewProfile">View Profile</string>
    <string name="viewDetails">View details ↓↓</string>
    <string name="markAsRead">Mark as read</string>
    <string name="resendFile">Resend file boss</string>
    <string name="askForResend">Photo not found. Ask user to resend!</string>
    <string name="deleteForOthers">Message(s) deleted for</string>
    <string name="deleteForMe">Message(s) deleted for only you.</string>
    <string name="deleteForEveryone">Message(s) deleted for everyone.</string>
    <string name="unpin">Unpin</string>
    <string name="delete">Del.</string>
    <string name="forward_">Forward</string>
    <string name="unpinForMe">Unpin for me</string>
    <string name="unpinForEveryone">Unpin for everyone</string>
    <string name="pinForMe">Pin for only me</string>
    <string name="pinForEveryone">Pin for everyone</string>
    <string name="unpin_">(Un)pin</string>
    <string name="move">Move</string>
    <string name="mute">Mute</string>
    <string name="Copy">Copy</string>
    <string name="blockAndReport">Block &amp; Report</string>
    <string name="lastSeen">Online</string>
    <string name="typing">Typing...</string>
    <string name="clear_chats">Clear Chats</string>
    <string name="disappear_msg">Set Disappear Message</string>
    <string name="search">Search</string>
    <string name="join_tour">Join Tournament</string>
    <string name="forward">Forward to…</string>
    <string name="selectPlayer">Select player(s)…</string>
    <string name="file">File</string>
    <string name="hintTitle">Hint</string>
    <string name="clearPin">Clear Pins</string>
    <string name="hint">Hint</string>
    <string name="hint2">Hello! Alert me let\'s play live stream game together!</string>
    <string name="add_message">Add message</string>
    <string name="online">Online</string>
    <string name="more">Open\nGallery</string>
    <string name="single">Single</string>
    <string name="multiple">Multiple</string>
    <string name="send">Send</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="more_">More</string>
    <string name="live">Live</string>
    <string name="home">Home</string>
    <string name="unavailable">Unavailable</string>
    <string name="confirmMsg_">Are you sure you want to delete? Item(s) deleted will no longer appear on your chats.</string>
    <string name="thumbDelMsg">Are you sure you want to delete? This might result to irresponsive user interface on previous chats</string>
    <string name="cacheDelMsg">Not to worry, our system automatically cleans up the cache when it reaches 50MB ~ 100MB. Do you clear wish to clear it?</string>
    <string name="localDatabaseMsg">To prevent losing your chats, data and important records, we have disabled deleting app database.
        You can do it manually from your phone setting if you still insist.</string>
    <string name="clear">Clear</string>
    <string name="clearCache">Clear cache?</string>
    <string name="clearDatabase">Can\'t clear database</string>
    <string name="deleteNow">Delete now?</string>
    <string name="deleteAllThumbNow">Delete all thumbnails?</string>
    <string name="delete_">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="deleteSuccessful">item(s) deleted</string>
    <string name="cacheClear">Cache cleared!</string>
    <string name="newEmail__">New email *</string>
    <string name="email__">Email *</string>
    <string name="createPassword__">Create login password *</string>
    <string name="newPassword">New password *</string>
    <string name="newPin">New Pin *</string>
    <string name="oldPin">Old Pin *</string>
    <string name="oldPassword">Old password *</string>
    <string name="displayName">Display name</string>
    <string name="username__">Username *</string>
    <string name="setUp">Set Up</string>
    <string name="setUpProfile">Set Up Profile</string>
    <string name="passwordNeed">For security, this password will be needed on your next login.</string>
    <string name="confirmPassword">Confirm password *</string>
    <string name="imageUploadError">Error occur uploading image</string>
    <string name="profileSetUpSuccess">Profile setup successful</string>
    <string name="resetPassword">Reset Password</string>
    <string name="resetPasswordSent">Password reset sent to your email.</string>
    <string name="loginPage">Go to login page.</string>
    <string name="usernameExist">Username already exist.</string>
    <string name="usernameAvailable">Username is available.</string>
    <string name="fieldEmpty">Email &amp; password required.</string>
    <string name="fieldEmpty_">Empty field!</string>
    <string name="passwordAbove5">Password length must be 6 above.</string>
    <string name="passwordDontMatch">Password do not match.</string>
    <string name="newEmailRequired">Can not use previous email. Use new email…</string>
    <string name="terms">Read TopStar full terms</string>
    <string name="logOut">Logout</string>
    <string name="logIn">Login</string>
    <string name="loginSuccessful">Login Successful</string>
    <string name="accountCreated">Account created successfully.</string>
    <string name="alert">Alerts</string>
    <string name="chats">Chats</string>
    <string name="players">Players</string>
    <string name="league">League</string>
    <string name="tour">Tour.</string>
    <string name="wallet">Wallet</string>
    <string name="walletSecurity">Wallet Security</string>
    <string name="gameSecurity">Games Security</string>
    <string name="walletSub">Asset ~ Withdraw ~ Transfer ~ Convert…</string>
    <string name="dashboard">Dashboard</string>
    <string name="dashboardSub">Tournaments ~ World Rank ~ Upcoming game…</string>
    <string name="setting">Settings</string>
    <string name="settingSub">Privacy ~ Profile ~ P2P ~ Sounds ~ Security…</string>
    <string name="premium">Premium</string>
    <string name="premiumSub">Orange tick ~ Host globally ~ More features…</string>
    <string name="advertise">Advertise</string>
    <string name="advertiseSub">Run ads and reach more people…</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="invite_now">Invite now</string>
    <string name="you">You</string>
    <string name="invite_friendSub">Refer friends and earn bonus…</string>
    <string name="support">Support</string>
    <string name="supportSub">Live chat ~ Contacts ~ Q&amp;A…</string>
    <string name="language">Language +</string>
    <string name="hostPlayer">Host Players</string>
    <string name="createLeague">Create League</string>
    <string name="createComm">Create Community</string>
    <string name="buyDate">Buy Data</string>
    <string name="unknown">Unknown</string>
    <string name="asideRewardFun">Aside the reward, have fun!</string>
    <string name="haveFun">Have fun!</string>
    <string name="profileInfo">KYC, change photo, username, display name</string>
    <string name="privacy">Privacy</string>
    <string name="privacyInfo">Last seen, alert, calls, comm. &amp; block user.</string>
    <string name="sounds">Sounds</string>
    <string name="soundsInfo">Alert, community, calls, p2p notify &amp; game.</string>
    <string name="storage">Storage</string>
    <string name="storageInfo">Media and Files.</string>
    <string name="security">Security</string>
    <string name="securityInfo">Change password, pin &amp; un/activate fingerprint.</string>
    <string name="Games">Account</string>
    <string name="P2PInfo">Setup payment account, register as P2P Merchant.</string>
    <string name="card">Card(s)</string>
    <string name="waiting">Awaiting</string>
    <string name="toJoin">to join.</string>
    <string name="quitGameSure">Quit game?</string>
    <string name="quitGameForEveryone">Quit game for everyone?</string>
    <string name="yes_">Yes</string>
    <string name="quit">Quit</string>
    <string name="whotGame">Whot Game</string>
    <string name="incoming">Incoming </string>
    <string name="from">from </string>
    <string name="silent">Silent </string>
    <string name="gameMode">Game mode </string>
    <string name="amountPerPlayer">Amount per player (0.1 min.) </string>
    <string name="remarkToPlayers">Remark (optional) </string>
    <string name="gameBal">Game balance:  </string>
    <string name="topUp">TopUp ></string>
    <string name="notice">Note: \n1. The stake amount will be deducted from your wallet and other players who joined.
        \n2. The staking funds will be moved to \'Locked Asset\'. Which means you can\'t access the fund till the end of the game.
        \n3. The total stake funds will be credited to the winner\'s wallet immediately the game ends.</string>
    <string name="onboarding">Onboarding Players </string>
    <string name="startNow">Start now </string>
    <string name="mode_">Mode: </string>
    <string name="free">Free </string>
    <string name="stake">Stake </string>
    <string name="gameType">Game type: </string>
    <string name="expectedPlayer">Players: </string>
    <string name="hostRemark">Host remark: </string>
    <string name="hostBy">Host by:  </string>
    <string name="winnerPrize">Winner prize: </string>
    <string name="awaiting">Awaiting… </string>
    <string name="signalling">Signalling… </string>
    <string name="joined">Joined</string>
    <string name="gameDecision"> will be transferred from your Game Asset to your Lock Asset,
        where it will be held until the game is over.</string>
    <string name="yesJoin">Yes, join.</string>
    <string name="noCancel">No, cancel.</string>
    <string name="insufficientBal">Insufficient Game Balance. Kindly TopUp!</string>
    <string name="joinHost">Joined ~ Host</string>
    <string name="rejected">Rejected</string>
    <string name="gameRejected">Game rejected!</string>
    <string name="re_add">re-add:</string>
    <string name="playerRemoved">Player removed.</string>
    <string name="only">Only:</string>
    <string name="kyc_verify">KYC verified users</string>
    <string name="premiumUser">Premium users</string>
    <string name="myCommMember">My community members</string>
    <string name="selectThanOne"> PS: You can select more than one.</string>
    <string name="myContact"> My contacts</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="privacyValue">We value your privacy!</string>
    <string name="lastSeen_">Last seen and online</string>
    <string name="everyone">Everyone</string>
    <string name="contactExcept">My contacts except…</string>
    <string name="nobodyExcept">Nobody except…</string>
    <string name="onlyContact">My contacts</string>
    <string name="profilePhoto">Profile photo</string>
    <string name="blockContact">Block contact(s)</string>
    <string name="societies">Communities</string>
    <string name="readAlert">Read alerts receipt</string>
    <string name="calls">Calls</string>
    <string name="none">None</string>
    <string name="whoCanAlert">Who can alert (chat) me >> everyone</string>
    <string name="whoCanHost">Who can host me  >> everyone</string>
    <string name="whoCanCall">Who can call me >> everyone</string>
    <string name="privateNumber">Private (my contacts)</string>
    <string name="off">Off</string>
    <string name="games">Games</string>
    <string-array name="whoParticipate">
        <item>Who can participate?</item>
        <item>Anyone</item>
        <item>ID card verified user</item>
        <item>My community only</item>
        <item>My contacts</item>
    </string-array>
</resources>